bug squashing

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,7 +7,7 @@ h4 {
 }
 
 .noCharacters {
-    padding: 15px 66px;
+    padding: 15px 64px 0;
     text-align: left;
 }
 
@@ -59,7 +59,9 @@ h4 {
     width: 100%;
     justify-content: space-around;
 }
-
+.character:nth-child(2) {
+    background: lightgray
+}
 
 .characterLink:hover {
     background: purple;
@@ -80,6 +82,7 @@ h4 {
     font-weight: 700;
     text-align: left;
     padding-left: 70px;
+    font-size: 13px;
 }
 .character p:last-child {
     padding-right: 70px;
